--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -26,7 +26,7 @@
       <tr ng-repeat="blog in blogs">
         <td>{{$index+1}}</td>
         <td><a href="{{ blog.url }}">{{ blog.name }}</a></td>
-        <td><span class="glyphicon glyphicon-thumbs-up" data-ng-click="addVote($index)"></span> {{ blog.votes }}</td>
+        <td><span class="glyphicon glyphicon-thumbs-up" data-ng-click="addVote($index)"></span> {{ blog.votes.length }}</td>
         <td>{{ blog.linkingsites }}</td>
         <td>{{ blog.mozrank }}</td>
         <td>{{ blog.pagerank }}</td>
