Add display name

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -6,7 +6,8 @@
     <div class="col-lg-12">
     <a href="">Log In To Vote</a><br> 
     <a href="">Log Out</a>
-    <p>Hello username.</p>
+    <p>Hello {{ userName }}.</p>
+    <a href="">View My Favorite Blogs</a>
     <h1>Top Programming Blogs</h1>
     <p>Top Programming Blogs ranks the top blogs in the programming field by popularity metrics.</p>
     <table class="table table-bordered">
