--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,9 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
     <!-- MomentJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.js"></script>
+    <!-- CryptoJS -->
+    <!-- <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script> -->
+    <script src="http://crypto-js.googlecode.com/files/2.3.0-crypto-sha1-hmac.js"></script>
 
 </body>
 </html>
